# point_cloud_editor

./: point_cloud_editor.pro
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  point_cloud_editor.pro
